# lambda_calculus

./: .gitignore  CMakeLists.txt  README.md
cmake/: shared_settings.cmake
lambda_calculus/: CMakeLists.txt  lambda_calculus.cpp  term.h  term_arena.cpp  term_arena.h  term_id.h  term_reduction.cpp  term_reduction.h  term_serialization.cpp  term_serialization.h
lambda_calculus/utils/: overloaded.h  stdint.h  utf8.cpp  utf8.h  visit.h
